# slam-practice

./: .gitignore  README.md
ch2/: CMakeLists.txt  helloSLAM.cpp  libhelloSLAM.cpp  libhelloSLAM.h  use_libhelloSLAM.cpp
ch3/: notes.md
ch3/examples/: coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch5/: camera_and_image.ipynb  camera_and_photo.ipynb
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/stereoVision/: CMakeLists.txt  stereoVision.cpp
ch7/: CMakeLists.txt  Makefile  orb_cv  orb_cv.cpp
chap2/: CMakeLists.txt
opencv-python/: 1-basic-operation-images.ipynb  2-arthemetic-operations-on-images.ipynb  3-feature-detection-description.ipynb  3-image-processing.ipynb  4-feature-detection-description.ipynb
robot-mapping-course/: README.md
